# what-am-i-doing

./: .gitignore  AGENTS.md  README.md  config.example.yaml  plan.md  pyproject.toml  sp-generate-tasks.py
docs/superpowers/plans/: 2026-05-02-package-rename-waid.md  2026-05-02-task-sync-stable-id.md  2026-05-02-visual-classification-and-unified-state-dir.md
docs/superpowers/specs/: 2026-05-02-package-rename-waid.md  2026-05-02-task-sync-stable-id-design.md  2026-05-02-visual-classification-and-unified-state-dir.md
extensions/gnome/: extension.js  metadata.json  stylesheet.css
skills/waid-train/: SKILL.md  sample_pairs.py
src/waid/: __main__.py  classifier.py  config.py  constants.py  daemon.py  debug.py  defaults.py  llm.py  models.py  ocr.py  resources.py  service.py  storage.py
src/waid/actions/: __init__.py  runner.py
src/waid/providers/: __init__.py  base.py
src/what_am_i_doing/: __main__.py  activity_catalog.py  categories.py  classifier.py  config.py  constants.py  daemon.py  dbus_service.py  debug.py  defaults.py  generator.py  llm.py  models.py  resources.py  service.py  storage.py  wizard.py
src/what_am_i_doing/actions/: runner.py
src/what_am_i_doing/providers/: base.py  gnome.py
src/what_am_i_doing/stats/: __init__.py  (+1 more)
systemd/: waid.service
tests/: test_categories.py  test_classifier.py  test_cli_learn.py  test_cli_main.py  test_config.py  test_daemon.py  test_dbus_service.py  test_debug.py  test_extension_assets.py  test_generator.py  test_gnome_provider.py  test_llm.py  test_service.py  test_sp_generate_tasks.py  test_taxonomy.py
(+24 files in other folders)
